--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-landing-page",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://pawankalyan6899.github.io/React.js-Assignment",
+  "homepage": "https://pawankalyan6899.github.io/react-landingpage",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
