--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "react-landing-page",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://pawankalyan6899.github.io/react-landingpage",
+  "homepage": "https://pawankalyan6899.github.io/test",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
